// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots All Components/Blockquote With Citation 1`] = `
<blockquote
  className="sc-bdVaJa gmSXkm"
>
  <q
    className="sc-bwzfXH gqIjTA"
  >
    Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
  </q>
  <cite
    className="sc-htpNat eaMNlw"
  >
    Ian Malcolm
  </cite>
</blockquote>
`;

exports[`Storyshots All Components/Blockquote Without Citation 1`] = `
<blockquote
  className="sc-bdVaJa gmSXkm"
>
  <q
    className="sc-bwzfXH gqIjTA"
  >
    Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
  </q>
</blockquote>
`;

exports[`Storyshots All Components/Breadcrumbs Normal 1`] = `
<ol
  className="sc-bxivhb cpkjqV"
>
  <li
    className="sc-ifAKCX TSOqM"
  >
    <a
      className="sc-EHOje eTLzlg"
      href="/#"
      onClick={[Function]}
    >
      Industry
    </a>
  </li>
  <li
    className="sc-ifAKCX TSOqM"
  >
    <a
      className="sc-EHOje eTLzlg"
      href="/#"
      onClick={[Function]}
    >
      Get funding
    </a>
  </li>
  <li
    className="sc-ifAKCX TSOqM"
  >
    Find a fund to create films, TV or new formats of storytelling
  </li>
</ol>
`;

exports[`Storyshots All Components/Breadcrumbs Wrapping 1`] = `
<ol
  className="sc-bxivhb cpkjqV"
>
  <li
    className="sc-ifAKCX TSOqM"
  >
    <a
      className="sc-EHOje eTLzlg"
      href="/#"
      onClick={[Function]}
    >
      Industry
    </a>
  </li>
  <li
    className="sc-ifAKCX TSOqM"
  >
    <a
      className="sc-EHOje eTLzlg"
      href="/#"
      onClick={[Function]}
    >
      Get funding
    </a>
  </li>
  <li
    className="sc-ifAKCX TSOqM"
  >
    <a
      className="sc-EHOje eTLzlg"
      href="/#"
      onClick={[Function]}
    >
      Find a fund to create films, TV or new formats of storytelling
    </a>
  </li>
  <li
    className="sc-ifAKCX TSOqM"
  >
    Find a fund to create films, TV or new formats of storytelling
  </li>
</ol>
`;

exports[`Storyshots All Components/Button Primary 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <a
    className="sc-bZQynM bNuRdl"
    colorScheme={0}
    href="/#"
    onClick={[Function]}
  >
    Click me
  </a>
</div>
`;

exports[`Storyshots All Components/Button Secondary 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <a
    className="sc-gzVnrw giGuYD"
    colorScheme={0}
    href="/#"
    onClick={[Function]}
  >
    Click me
  </a>
</div>
`;

exports[`Storyshots All Components/Divider Normal 1`] = `
<hr
  className="sc-htoDjs hAjIAk"
/>
`;

exports[`Storyshots All Components/Footer Normal 1`] = `
<footer
  className="sc-dnqmqq kVNAGq"
>
  <div
    className="sc-iwsKbI iZPEoN"
  >
    <section
      className="sc-gqjmRU jZSsCi"
    >
      <img
        alt="British Film Institute. Film Forever."
        className="sc-gZMcBi kikhDD"
        src="test-file-stub"
      />
      <nav
        className="sc-jTzLTM jwEjTs"
      >
        <h4
          className="sc-fjdhpX lZPxJ"
        >
          Business
        </h4>
        <a
          aria-current="page"
          className="sc-cSHVUG lbaKwf"
          href="/"
          onClick={[Function]}
        >
          Partnerships
        </a>
        <a
          aria-current="page"
          className="sc-cSHVUG lbaKwf"
          href="/"
          onClick={[Function]}
        >
          Venue hire
        </a>
        <a
          aria-current="page"
          className="sc-cSHVUG lbaKwf"
          href="/"
          onClick={[Function]}
        >
          Viewing theatre hire
        </a>
        <a
          aria-current="page"
          className="sc-cSHVUG lbaKwf"
          href="/"
          onClick={[Function]}
        >
          Book a film for your cinema
        </a>
      </nav>
      <nav
        className="sc-jTzLTM jwEjTs"
      >
        <h4
          className="sc-fjdhpX lZPxJ"
        >
          About the BFI
        </h4>
        <a
          aria-current="page"
          className="sc-cSHVUG lbaKwf"
          href="/"
          onClick={[Function]}
        >
          Our story
        </a>
        <a
          aria-current="page"
          className="sc-cSHVUG lbaKwf"
          href="/"
          onClick={[Function]}
        >
          Our team
        </a>
        <a
          aria-current="page"
          className="sc-cSHVUG lbaKwf"
          href="/"
          onClick={[Function]}
        >
          Careers
        </a>
        <a
          aria-current="page"
          className="sc-cSHVUG lbaKwf"
          href="/"
          onClick={[Function]}
        >
          Our partners
        </a>
        <a
          aria-current="page"
          className="sc-cSHVUG lbaKwf"
          href="/"
          onClick={[Function]}
        >
          Press releases and media enquiries
        </a>
      </nav>
      <nav
        className="sc-jTzLTM jwEjTs"
      >
        <h4
          className="sc-fjdhpX lZPxJ"
        >
          Keep in touch
        </h4>
        <a
          aria-current="page"
          className="sc-cSHVUG lbaKwf"
          href="/"
          onClick={[Function]}
        >
          Contact us
        </a>
        <a
          className="sc-kAzzGY dBmtLY"
          href="#"
        >
          <img
            alt=""
            className="sc-chPdSV bSAUnu"
            src="test-file-stub"
          />
          Facebook
        </a>
        <a
          className="sc-kAzzGY dBmtLY"
          href="#"
        >
          <img
            alt=""
            className="sc-chPdSV bSAUnu"
            src="test-file-stub"
          />
          Twitter
        </a>
        <a
          className="sc-kAzzGY dBmtLY"
          href="#"
        >
          <img
            alt=""
            className="sc-chPdSV bSAUnu"
            src="test-file-stub"
          />
          YouTube
        </a>
        <a
          className="sc-kAzzGY dBmtLY"
          href="#"
        >
          <img
            alt=""
            className="sc-chPdSV bSAUnu"
            src="test-file-stub"
          />
          Instagram
        </a>
      </nav>
    </section>
    <section
      className="sc-VigVT hUbEDI"
    >
      <img
        alt="The BFI recieves National Lottery funding"
        src="test-file-stub"
      />
      <p
        className="sc-jzJRlG enxKql"
      >
        ©2020 British Film Institute. All rights reserved. Registered charity 287780
      </p>
    </section>
  </div>
</footer>
`;

exports[`Storyshots All Components/Header Opaque Background 1`] = `
Array [
  <div
    className="sc-kpOJdX gzdIB"
  >
    <div
      className="sc-dxgOiQ jNKqYJ"
    >
      <ul
        className="sc-ckVGcZ bPSmhm"
      >
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>,
  <header
    className="sc-csuQGl cPdbOL"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-Rmtcm jWoRCr"
    >
      <a
        aria-current="page"
        className="sc-bRBYWo krZptX"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-hzDkRC ggbliJ"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-brqgnP hHtDLE"
      >
        <ul
          className="sc-cMljjf dDVhTj"
        >
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-jDwBTQ hqNJYM"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Watch & Discover
            </a>
          </li>
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              aria-haspopup="true"
              className="sc-jDwBTQ djVIeW"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Make & Industry
            </a>
          </li>
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              aria-haspopup="true"
              className="sc-jDwBTQ djVIeW"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Learn & Education
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-jWBwVP ZQfIc"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-cvbbAY bzjrEM"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-kgoBCf lkctXv"
      >
        <img
          alt=""
          className="sc-kGXeez bRTIXE"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>,
]
`;

exports[`Storyshots All Components/Header Transparent Background 1`] = `
Array [
  <div
    className="sc-kpOJdX gzdIB"
  >
    <div
      className="sc-dxgOiQ jNKqYJ"
    >
      <ul
        className="sc-ckVGcZ bPSmhm"
      >
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>,
  <header
    className="sc-csuQGl hbsGTQ"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-Rmtcm jWoRCr"
    >
      <a
        aria-current="page"
        className="sc-bRBYWo krZptX"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-hzDkRC ggbliJ"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-brqgnP hHtDLE"
      >
        <ul
          className="sc-cMljjf dDVhTj"
        >
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-jDwBTQ edqzqS"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Watch & Discover
            </a>
          </li>
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              aria-haspopup="true"
              className="sc-jDwBTQ eeUude"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Make & Industry
            </a>
          </li>
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              aria-haspopup="true"
              className="sc-jDwBTQ eeUude"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Learn & Education
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-jWBwVP ZQfIc"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-cvbbAY bzjrEM"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-kgoBCf hiPjLY"
      >
        <img
          alt=""
          className="sc-kGXeez bRTIXE"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>,
]
`;

exports[`Storyshots All Components/Header With Overflowing Content 1`] = `
Array [
  <div
    className="sc-kpOJdX gzdIB"
  >
    <div
      className="sc-dxgOiQ jNKqYJ"
    >
      <ul
        className="sc-ckVGcZ bPSmhm"
      >
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>,
  <header
    className="sc-csuQGl cPdbOL"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-Rmtcm jWoRCr"
    >
      <a
        aria-current="page"
        className="sc-bRBYWo krZptX"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-hzDkRC ggbliJ"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-brqgnP hHtDLE"
      >
        <ul
          className="sc-cMljjf dDVhTj"
        >
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-jDwBTQ hqNJYM"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Watch & Discover
            </a>
          </li>
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              aria-haspopup="true"
              className="sc-jDwBTQ djVIeW"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Make & Industry
            </a>
          </li>
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              aria-haspopup="true"
              className="sc-jDwBTQ djVIeW"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Learn & Education
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-jWBwVP ZQfIc"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-cvbbAY bzjrEM"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-kgoBCf lkctXv"
      >
        <img
          alt=""
          className="sc-kGXeez bRTIXE"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>,
  <div
    style={
      Object {
        "background": "linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 100%)",
        "height": "200vh",
        "width": "100%",
      }
    }
  />,
]
`;

exports[`Storyshots All Components/Headline Level 1 1`] = `
<h1
  className="sc-jhAzac ecXjKB"
>
  My example headline
</h1>
`;

exports[`Storyshots All Components/Headline Level 2 1`] = `
<h2
  className="sc-fBuWsC exUQCz"
>
  My example headline
</h2>
`;

exports[`Storyshots All Components/Headline Level 3 1`] = `
<h3
  className="sc-fMiknA feuurY"
>
  My example headline
</h3>
`;

exports[`Storyshots All Components/Hero Full Height 1`] = `
<section
  className="sc-eqIVtm bYGoAy"
>
  <div
    className="sc-fAjcbJ jGGHpv"
  >
    <h1
      className="sc-jhAzac ecXjKB"
    >
      Watch a new film, rediscover your old favourites, and get inspired.
    </h1>
  </div>
</section>
`;

exports[`Storyshots All Components/Hero Normal 1`] = `
<section
  className="sc-eqIVtm lmJjqG"
>
  <div
    className="sc-fAjcbJ jGGHpv"
  >
    <h1
      className="sc-jhAzac ecXjKB"
    >
      Watch a new film, rediscover your old favourites, and get inspired.
    </h1>
  </div>
</section>
`;

exports[`Storyshots All Components/Hero With Header 1`] = `
Array [
  <div
    className="sc-kpOJdX gzdIB"
  >
    <div
      className="sc-dxgOiQ jNKqYJ"
    >
      <ul
        className="sc-ckVGcZ bPSmhm"
      >
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>,
  <header
    className="sc-csuQGl hbsGTQ"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-Rmtcm jWoRCr"
    >
      <a
        aria-current="page"
        className="sc-bRBYWo krZptX"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-hzDkRC ggbliJ"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-brqgnP hHtDLE"
      >
        <ul
          className="sc-cMljjf dDVhTj"
        >
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-jDwBTQ edqzqS"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Watch & Discover
            </a>
          </li>
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              aria-haspopup="true"
              className="sc-jDwBTQ eeUude"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Make & Industry
            </a>
          </li>
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              aria-haspopup="true"
              className="sc-jDwBTQ eeUude"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Learn & Education
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-jWBwVP ZQfIc"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-cvbbAY bzjrEM"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-kgoBCf hiPjLY"
      >
        <img
          alt=""
          className="sc-kGXeez bRTIXE"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>,
  <section
    className="sc-eqIVtm lmJjqG"
  >
    <div
      className="sc-fAjcbJ jGGHpv"
    >
      <h1
        className="sc-jhAzac ecXjKB"
      >
        Watch a new film, rediscover your old favourites, and get inspired.
      </h1>
    </div>
  </section>,
]
`;

exports[`Storyshots All Components/ImageSide Left And Big 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <figure
    className="sc-caSCKo hTRZGr"
  >
    <img
      alt="Alt text"
      className="sc-gisBJw hoxvQY"
      src="http://placehold.it/600x400"
    />
    <figcaption
      className="sc-kjoXOD kFqpif"
    >
      Example image caption
    </figcaption>
  </figure>
  <article
    className="sc-cHGsZl cyWGHI"
  >
    


    <p>
      We gotta burn the rain forest, 
      <strong>
        dump toxic waste
      </strong>
      , pollute the air, and 
      <a
        href="#"
      >
        rip up the OZONE!
      </a>
       'Cause maybe if we screw up this planet enough, they won't want it anymore! We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore!
    </p>
    


    <ol>
      
    
      <li>
        What do they got in there? King Kong?
      </li>
      
    
      <li>
        You really think you can fly that thing?
      </li>
      
    
      <li>
        Must go faster
      </li>
      

    </ol>
    


    <p>
      You really think you can fly that thing? Eventually, you do plan to have dinosaurs on your dinosaur tour, right? 
      <a
        href="#"
      >
        I gave it a cold?
      </a>
       I gave it a virus. A computer virus. Did he just throw my cat out of the window? You're a very talented young man, with your own clever thoughts and ideas. Do you need a manager?
    </p>
    


    <ul>
      
    
      <li>
        What do they got in there? King Kong?
      </li>
      
    
      <li>
        You really think you can fly that thing?
      </li>
      
    
      <li>
        Must go faster
      </li>
      

    </ul>
    


  </article>
</div>
`;

exports[`Storyshots All Components/ImageSide Right And Small 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <figure
    className="sc-caSCKo dlHyPX"
  >
    <img
      alt="Alt text"
      className="sc-gisBJw hoxvQY"
      src="http://placehold.it/200x200"
    />
    <figcaption
      className="sc-kjoXOD kFqpif"
    >
      Example image caption
    </figcaption>
  </figure>
  <article
    className="sc-cHGsZl cyWGHI"
  >
    


    <p>
      We gotta burn the rain forest, 
      <strong>
        dump toxic waste
      </strong>
      , pollute the air, and 
      <a
        href="#"
      >
        rip up the OZONE!
      </a>
       'Cause maybe if we screw up this planet enough, they won't want it anymore! We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore!
    </p>
    


    <ol>
      
    
      <li>
        What do they got in there? King Kong?
      </li>
      
    
      <li>
        You really think you can fly that thing?
      </li>
      
    
      <li>
        Must go faster
      </li>
      

    </ol>
    


    <p>
      You really think you can fly that thing? Eventually, you do plan to have dinosaurs on your dinosaur tour, right? 
      <a
        href="#"
      >
        I gave it a cold?
      </a>
       I gave it a virus. A computer virus. Did he just throw my cat out of the window? You're a very talented young man, with your own clever thoughts and ideas. Do you need a manager?
    </p>
    


    <ul>
      
    
      <li>
        What do they got in there? King Kong?
      </li>
      
    
      <li>
        You really think you can fly that thing?
      </li>
      
    
      <li>
        Must go faster
      </li>
      

    </ul>
    


  </article>
</div>
`;

exports[`Storyshots All Components/Images Normal 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "1000px",
      "padding": "20px",
    }
  }
>
  <figure
    className="sc-TOsTZ enDTPW"
  >
    <div
      className="sc-cJSrbW kkuAeV"
    >
      <button
        className="sc-ksYbfQ iKfaOh"
        onClick={[Function]}
      >
        <img
          alt="Example image"
          className="sc-hmzhuo fGLWnE"
          src="http://placehold.it/300x200"
        />
      </button>
      <button
        className="sc-ksYbfQ iKfaOh"
        onClick={[Function]}
      >
        <img
          alt="Example image 2"
          className="sc-hmzhuo fGLWnE"
          src="http://placehold.it/200x300"
        />
      </button>
      <button
        className="sc-ksYbfQ iKfaOh"
        onClick={[Function]}
      >
        <img
          alt="Example image 3"
          className="sc-hmzhuo fGLWnE"
          src="http://placehold.it/600x400"
        />
      </button>
    </div>
    <figcaption
      className="sc-kgAjT iaYcpi"
    >
      A gallery of three images
    </figcaption>
  </figure>
</div>
`;

exports[`Storyshots All Components/Images Not Clickable 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "1000px",
      "padding": "20px",
    }
  }
>
  <figure
    className="sc-TOsTZ enDTPW"
  >
    <div
      className="sc-cJSrbW kkuAeV"
    >
      <img
        alt="Example image"
        className="sc-hmzhuo lekZfZ"
        src="http://placehold.it/300x200"
      />
      <img
        alt="Example image 2"
        className="sc-hmzhuo lekZfZ"
        src="http://placehold.it/200x300"
      />
      <img
        alt="Example image 3"
        className="sc-hmzhuo lekZfZ"
        src="http://placehold.it/600x400"
      />
    </div>
    <figcaption
      className="sc-kgAjT iaYcpi"
    >
      A gallery of three images
    </figcaption>
  </figure>
</div>
`;

exports[`Storyshots All Components/Images Only One 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "1000px",
      "padding": "20px",
    }
  }
>
  <figure
    className="sc-TOsTZ enDTPW"
  >
    <div
      className="sc-cJSrbW eHcDyA"
    >
      <button
        className="sc-ksYbfQ iKfaOh"
        onClick={[Function]}
      >
        <img
          alt="Example image"
          className="sc-hmzhuo fGLWnE"
          src="http://placehold.it/300x200"
        />
      </button>
    </div>
    <figcaption
      className="sc-kgAjT iaYcpi"
    >
      A single full-width image
    </figcaption>
  </figure>
</div>
`;

exports[`Storyshots All Components/Lead paragraph Normal 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <article
    className="sc-kvZOFW icNtCo"
  >
    We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore! We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore!
  </article>
</div>
`;

exports[`Storyshots All Components/Page Normal 1`] = `
Array [
  <div
    className="sc-kpOJdX gzdIB"
  >
    <div
      className="sc-dxgOiQ jNKqYJ"
    >
      <ul
        className="sc-ckVGcZ bPSmhm"
      >
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>,
  <header
    className="sc-csuQGl cPdbOL"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-Rmtcm jWoRCr"
    >
      <a
        aria-current="page"
        className="sc-bRBYWo krZptX"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-hzDkRC ggbliJ"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-brqgnP hHtDLE"
      >
        <ul
          className="sc-cMljjf dDVhTj"
        >
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-jDwBTQ hqNJYM"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Watch & Discover
            </a>
          </li>
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              aria-haspopup="true"
              className="sc-jDwBTQ djVIeW"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Make & Industry
            </a>
          </li>
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              aria-haspopup="true"
              className="sc-jDwBTQ djVIeW"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Learn & Education
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-jWBwVP ZQfIc"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-cvbbAY bzjrEM"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-kgoBCf lkctXv"
      >
        <img
          alt=""
          className="sc-kGXeez bRTIXE"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>,
  <div
    className="sc-hqyNC fityal"
  >
    <article
      className="sc-jbKcbu fnpTtU"
    >
      <ol
        className="sc-bxivhb cpkjqV"
      >
        <li
          className="sc-ifAKCX TSOqM"
        >
          <a
            className="sc-EHOje eTLzlg"
            href="/#"
            onClick={[Function]}
          >
            Industry
          </a>
        </li>
        <li
          className="sc-ifAKCX TSOqM"
        >
          <a
            className="sc-EHOje eTLzlg"
            href="/#"
            onClick={[Function]}
          >
            Get funding
          </a>
        </li>
        <li
          className="sc-ifAKCX TSOqM"
        >
          Find a fund to create films, TV or new formats of storytelling
        </li>
      </ol>
      <h1
        className="sc-jhAzac ecXjKB"
      >
        Headline goes here
      </h1>
      <article
        className="sc-kvZOFW icNtCo"
      >
        God creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates Dinosaurs. Do you have any idea how long it takes those cups to decompose. Yes, Yes, without the oops! Yes, Yes, without the oops! Drive us out of here!
      </article>
      <article
        className="sc-cHGsZl cyWGHI"
      >
        So you two dig up, dig up dinosaurs? Hey, you know how I'm, like, always trying to save the planet? Here's my chance. Is this my espresso machine? Wh-what is-h-how did you get my espresso machine? Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
      </article>
    </article>
    <aside
      className="sc-dNLxif kCADKD"
    >
      Sidebar here
    </aside>
  </div>,
  <footer
    className="sc-dnqmqq kVNAGq"
  >
    <div
      className="sc-iwsKbI iZPEoN"
    >
      <section
        className="sc-gqjmRU jZSsCi"
      >
        <img
          alt="British Film Institute. Film Forever."
          className="sc-gZMcBi kikhDD"
          src="test-file-stub"
        />
        <nav
          className="sc-jTzLTM jwEjTs"
        >
          <h4
            className="sc-fjdhpX lZPxJ"
          >
            Business
          </h4>
          <a
            aria-current="page"
            className="sc-cSHVUG lbaKwf"
            href="/"
            onClick={[Function]}
          >
            Partnerships
          </a>
          <a
            aria-current="page"
            className="sc-cSHVUG lbaKwf"
            href="/"
            onClick={[Function]}
          >
            Venue hire
          </a>
          <a
            aria-current="page"
            className="sc-cSHVUG lbaKwf"
            href="/"
            onClick={[Function]}
          >
            Viewing theatre hire
          </a>
          <a
            aria-current="page"
            className="sc-cSHVUG lbaKwf"
            href="/"
            onClick={[Function]}
          >
            Book a film for your cinema
          </a>
        </nav>
        <nav
          className="sc-jTzLTM jwEjTs"
        >
          <h4
            className="sc-fjdhpX lZPxJ"
          >
            About the BFI
          </h4>
          <a
            aria-current="page"
            className="sc-cSHVUG lbaKwf"
            href="/"
            onClick={[Function]}
          >
            Our story
          </a>
          <a
            aria-current="page"
            className="sc-cSHVUG lbaKwf"
            href="/"
            onClick={[Function]}
          >
            Our team
          </a>
          <a
            aria-current="page"
            className="sc-cSHVUG lbaKwf"
            href="/"
            onClick={[Function]}
          >
            Careers
          </a>
          <a
            aria-current="page"
            className="sc-cSHVUG lbaKwf"
            href="/"
            onClick={[Function]}
          >
            Our partners
          </a>
          <a
            aria-current="page"
            className="sc-cSHVUG lbaKwf"
            href="/"
            onClick={[Function]}
          >
            Press releases and media enquiries
          </a>
        </nav>
        <nav
          className="sc-jTzLTM jwEjTs"
        >
          <h4
            className="sc-fjdhpX lZPxJ"
          >
            Keep in touch
          </h4>
          <a
            aria-current="page"
            className="sc-cSHVUG lbaKwf"
            href="/"
            onClick={[Function]}
          >
            Contact us
          </a>
          <a
            className="sc-kAzzGY dBmtLY"
            href="#"
          >
            <img
              alt=""
              className="sc-chPdSV bSAUnu"
              src="test-file-stub"
            />
            Facebook
          </a>
          <a
            className="sc-kAzzGY dBmtLY"
            href="#"
          >
            <img
              alt=""
              className="sc-chPdSV bSAUnu"
              src="test-file-stub"
            />
            Twitter
          </a>
          <a
            className="sc-kAzzGY dBmtLY"
            href="#"
          >
            <img
              alt=""
              className="sc-chPdSV bSAUnu"
              src="test-file-stub"
            />
            YouTube
          </a>
          <a
            className="sc-kAzzGY dBmtLY"
            href="#"
          >
            <img
              alt=""
              className="sc-chPdSV bSAUnu"
              src="test-file-stub"
            />
            Instagram
          </a>
        </nav>
      </section>
      <section
        className="sc-VigVT hUbEDI"
      >
        <img
          alt="The BFI recieves National Lottery funding"
          src="test-file-stub"
        />
        <p
          className="sc-jzJRlG enxKql"
        >
          ©2020 British Film Institute. All rights reserved. Registered charity 287780
        </p>
      </section>
    </div>
  </footer>,
]
`;

exports[`Storyshots All Components/PageLinks Eight Links 1`] = `
<ul
  className="sc-jnlKLf hSEJjr"
>
  <li
    className="sc-jqCOkK ipcLQz"
  >
    <h4
      className="sc-dVhcbM dQVLzk"
    >
      Industry fund
    </h4>
    <p
      className="sc-uJMKN dEIluL"
    >
      What do they got in there? King Kong? You know what? It is beets. I've crashed into a beet truck. Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
    </p>
    <a
      className="sc-bbmXgH dabmKX"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-gGBfsJ bZJrty"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-jqCOkK ipcLQz"
  >
    <h4
      className="sc-dVhcbM dQVLzk"
    >
      Get funding fund
    </h4>
    <p
      className="sc-uJMKN dEIluL"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-bbmXgH dabmKX"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-gGBfsJ bZJrty"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-jqCOkK ipcLQz"
  >
    <h4
      className="sc-dVhcbM dQVLzk"
    >
      Get funding fund
    </h4>
    <p
      className="sc-uJMKN dEIluL"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-bbmXgH dabmKX"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-gGBfsJ bZJrty"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-jqCOkK ipcLQz"
  >
    <h4
      className="sc-dVhcbM dQVLzk"
    >
      Find a fund
    </h4>
    <p
      className="sc-uJMKN dEIluL"
    >
      Yes, Yes, without the oops! Hey, take a look at the earthlings. Goodbye!
    </p>
    <a
      className="sc-bbmXgH dabmKX"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-gGBfsJ bZJrty"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-jqCOkK ipcLQz"
  >
    <h4
      className="sc-dVhcbM dQVLzk"
    >
      Industry fund
    </h4>
    <p
      className="sc-uJMKN dEIluL"
    >
      What do they got in there? King Kong? You know what? It is beets. I've crashed into a beet truck. Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
    </p>
    <a
      className="sc-bbmXgH dabmKX"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-gGBfsJ bZJrty"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-jqCOkK ipcLQz"
  >
    <h4
      className="sc-dVhcbM dQVLzk"
    >
      Get funding fund
    </h4>
    <p
      className="sc-uJMKN dEIluL"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-bbmXgH dabmKX"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-gGBfsJ bZJrty"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-jqCOkK ipcLQz"
  >
    <h4
      className="sc-dVhcbM dQVLzk"
    >
      Get funding fund
    </h4>
    <p
      className="sc-uJMKN dEIluL"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-bbmXgH dabmKX"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-gGBfsJ bZJrty"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-jqCOkK ipcLQz"
  >
    <h4
      className="sc-dVhcbM dQVLzk"
    >
      Find a fund
    </h4>
    <p
      className="sc-uJMKN dEIluL"
    >
      Yes, Yes, without the oops! Hey, take a look at the earthlings. Goodbye!
    </p>
    <a
      className="sc-bbmXgH dabmKX"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-gGBfsJ bZJrty"
        src="test-file-stub"
      />
    </a>
  </li>
</ul>
`;

exports[`Storyshots All Components/PageLinks Four Links 1`] = `
<ul
  className="sc-jnlKLf hSEJjr"
>
  <li
    className="sc-jqCOkK ipcLQz"
  >
    <h4
      className="sc-dVhcbM dQVLzk"
    >
      Industry fund
    </h4>
    <p
      className="sc-uJMKN dEIluL"
    >
      What do they got in there? King Kong? You know what? It is beets. I've crashed into a beet truck. Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
    </p>
    <a
      className="sc-bbmXgH dabmKX"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-gGBfsJ bZJrty"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-jqCOkK ipcLQz"
  >
    <h4
      className="sc-dVhcbM dQVLzk"
    >
      Get funding fund
    </h4>
    <p
      className="sc-uJMKN dEIluL"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-bbmXgH dabmKX"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-gGBfsJ bZJrty"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-jqCOkK ipcLQz"
  >
    <h4
      className="sc-dVhcbM dQVLzk"
    >
      Get funding fund
    </h4>
    <p
      className="sc-uJMKN dEIluL"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-bbmXgH dabmKX"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-gGBfsJ bZJrty"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-jqCOkK ipcLQz"
  >
    <h4
      className="sc-dVhcbM dQVLzk"
    >
      Find a fund
    </h4>
    <p
      className="sc-uJMKN dEIluL"
    >
      Yes, Yes, without the oops! Hey, take a look at the earthlings. Goodbye!
    </p>
    <a
      className="sc-bbmXgH dabmKX"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-gGBfsJ bZJrty"
        src="test-file-stub"
      />
    </a>
  </li>
</ul>
`;

exports[`Storyshots All Components/PageLinks Three Links 1`] = `
<ul
  className="sc-jnlKLf hSEJjr"
>
  <li
    className="sc-jqCOkK ipcLQz"
  >
    <h4
      className="sc-dVhcbM dQVLzk"
    >
      Industry fund
    </h4>
    <p
      className="sc-uJMKN dEIluL"
    >
      What do they got in there? King Kong? You know what? It is beets. I've crashed into a beet truck. Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
    </p>
    <a
      className="sc-bbmXgH dabmKX"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-gGBfsJ bZJrty"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-jqCOkK ipcLQz"
  >
    <h4
      className="sc-dVhcbM dQVLzk"
    >
      Get funding fund
    </h4>
    <p
      className="sc-uJMKN dEIluL"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-bbmXgH dabmKX"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-gGBfsJ bZJrty"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-jqCOkK ipcLQz"
  >
    <h4
      className="sc-dVhcbM dQVLzk"
    >
      Get funding fund
    </h4>
    <p
      className="sc-uJMKN dEIluL"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-bbmXgH dabmKX"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-gGBfsJ bZJrty"
        src="test-file-stub"
      />
    </a>
  </li>
</ul>
`;

exports[`Storyshots All Components/StepByStep Primary 1`] = `
<div
  style={
    Object {
      "maxWidth": "350px",
      "padding": "20px",
    }
  }
>
  <section
    className="sc-fYxtnH hSLfWw"
  >
    <h3
      className="sc-tilXH brGkib"
    >
      Applying for film funding
    </h3>
    <ol
      className="sc-hEsumM eiLEeH"
    >
      <li
        className="sc-ktHwxA iNQrZj"
      >
        <button
          aria-expanded="false"
          className="sc-kafWEX gzunVU"
          onClick={[Function]}
        >
          <strong
            className="sc-cIShpX RtEBw"
          >
            Is this fund right for you?
          </strong>
          <p
            className="sc-feJyhm ljkdxt"
          >
            Show
          </p>
        </button>
      </li>
      <li
        className="sc-ktHwxA iNQrZj"
      >
        <button
          aria-expanded="false"
          className="sc-kafWEX gzunVU"
          onClick={[Function]}
        >
          <strong
            className="sc-cIShpX RtEBw"
          >
            Prepare your supporting materials
          </strong>
          <p
            className="sc-feJyhm ljkdxt"
          >
            Show
          </p>
        </button>
      </li>
      <li
        className="sc-ktHwxA iNQrZj"
      >
        <button
          aria-expanded="false"
          className="sc-kafWEX gzunVU"
          onClick={[Function]}
        >
          <strong
            className="sc-cIShpX RtEBw"
          >
            Apply
          </strong>
          <p
            className="sc-feJyhm ljkdxt"
          >
            Show
          </p>
        </button>
      </li>
      <li
        className="sc-ktHwxA iNQrZj"
      >
        <button
          aria-expanded="false"
          className="sc-kafWEX gzunVU"
          onClick={[Function]}
        >
          <strong
            className="sc-cIShpX RtEBw"
          >
            Wait to hear from us
          </strong>
          <p
            className="sc-feJyhm ljkdxt"
          >
            Show
          </p>
        </button>
      </li>
      <li
        className="sc-ktHwxA iNQrZj"
      >
        <button
          aria-expanded="false"
          className="sc-kafWEX gzunVU"
          onClick={[Function]}
        >
          <strong
            className="sc-cIShpX RtEBw"
          >
            Your decision
          </strong>
          <p
            className="sc-feJyhm ljkdxt"
          >
            Show
          </p>
        </button>
      </li>
    </ol>
  </section>
</div>
`;

exports[`Storyshots All Components/Text Normal 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <article
    className="sc-cHGsZl cyWGHI"
  >
    

            
    <p>
      We gotta burn the rain forest, 
      <strong>
        dump toxic waste
      </strong>
      , pollute the air, and 
      <a
        href="#"
      >
        rip up the OZONE!
      </a>
       'Cause maybe if we screw up this planet enough, they won't want it anymore! We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore!
    </p>
    

            
    <ol>
      
                
      <li>
        What do they got in there? King Kong?
      </li>
      
                
      <li>
        You really think you can fly that thing?
      </li>
      
                
      <li>
        Must go faster
      </li>
      
            
    </ol>
    

            
    <p>
      You really think you can fly that thing? Eventually, you do plan to have dinosaurs on your dinosaur tour, right? 
      <a
        href="#"
      >
        I gave it a cold?
      </a>
       I gave it a virus. A computer virus. Did he just throw my cat out of the window? You're a very talented young man, with your own clever thoughts and ideas. Do you need a manager?
    </p>
    

            
    <ul>
      
                
      <li>
        What do they got in there? King Kong?
      </li>
      
                
      <li>
        You really think you can fly that thing?
      </li>
      
                
      <li>
        Must go faster
      </li>
      
            
    </ul>
    
            
            
  </article>
</div>
`;
